classDiagram
%%    Editable <|--Product
    Product <|--Ticket
    Product <|--Publication
    Publication <|-- Book
    Publication <|-- Magazine
    Magazine <|-- DiscMag

    Product <|--ElectronicDevice
    ElectronicDevice <|--Laptop
    ElectronicDevice <|--Phone

    SaleableItem <|.. Product
    Serializable <|.. Product
    Product <-- CashTill
    Cart "0..*" -- "0..*" Product
    Order "0..*" -- "0..*" Product


    class Product{
        -String productId
    }

    class Cart {
        -List<CartItem> items
        +addItem(CartItem item)
        +getItems()
        +setItems(List<CartItem> items)
        +toString()
        +equals()
        +hashCode()
    }

    class Order {
        -Long id
        -double totalAmount
        -LocalDateTime orderDate
        -Set<Product> products
        +addProduct(Product)
    }


    class Serializable{
        <<interface>>
    }
    class Ticket{
        +description
        +price
        +sellItem()
    }
%%    class Editable{
%%        <<abstract>>
%%        -Scanner input
%%        +String getInput(String)
%%        +int getInput(int)
%%        +double getInput(double)
%%        +boolean getInput(boolean)
%%        +Date getInput(Date)
%%        +Enum getInput(Enum)
%%        +edit()*
%%        +initialize()*
%%
%%    }
    class Publication{
        <<Abstract>>
        -String title
        -double price
        -int copies
        +getPrice()

        +Publication()
        +Publication(String title, double price, int copies)
        +toString()
        +equals()
        +hashCode()

    }
    class Book{
        -String author
        +edit()
        +initialize()
        +sellItem()

        +Book()
        +Book(String author)
        +Book(String author, String title, double price, int copies)
        +toString()
        +equals()
        +hashCode()

    }
    class Magazine{
        -int orderQty
        -java.util.Date currentIssue

        +Magazine()
        +Magazine(int orderQty, Date currentIssue, String title, double price, int copies)

        +edit()
        +initialize()
        +sellItem()
    }
    class DiscMag{
        -boolean hasDisc
        +edit()
        +initialize()
        +sellItem()

        +DiscMag()
        +DiscMag(boolean, hasDisc, int orderQty, Date currentIssue, String title, double price, int copies)

    }

    class ElectronicDevice{
        <<Abstract>>
        -String brand
        -double price
        +getPrice()
        +setPrice(double)
        +getBrand()
        +setBrand(String)
        +edit()
        +initialize()
        +sellItem()
    }

    class Laptop{
        -int ramSize
        +Laptop()
        +Laptop(String brand, double price, int ramSize)
        +edit()
        +initialize()
        +sellItem()
        +getPrice()
        +toString()
    }

    class Phone{
        -int storageSize
        +Phone()
        +Phone(String brand, double price, int storageSize)
        +edit()
        +initialize()
        +sellItem()
        +getPrice()
        +toString()
    }

    class CashTill{
        -double runningTotal
        +CashTill()
        +showTotal()
        +sellItem(SaleableItem item)
    }
    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice()

    }